# test_task_yadro

./: CMakeLists.txt  README.md
include/: utils.h
src/: ClubSystem.cpp  main.cpp
test_task_yadro/: .gitignore
test_task_yadro/computer-club-system/: README.md
test_task_yadro/computer-club-system/src/: ClubSystem.h  main.cpp
test_task_yadro/tests/: ClubSystem_test.cpp
tests/: CMakeLists.txt
tests/fixtures/: auto_seat.txt  auto_seat_after_leave.txt  before_open.txt  billing.txt  end_day.txt  seat_unknown.txt  wait_with_free.txt
